# Mai

./: .env.example  .gitattributes  .gitignore  pyproject.toml
deploy/: .env.production.example  Caddyfile  DEPLOY.md  mai.service  setup.sh
docs/: portability-classifier-findings.md
docs/plans/: 01-foundation-walking-skeleton.md  02-github-harvester.md  03-ips-crawler.md  04-ai-enrichment.md  05-embeddings.md  06-correlation-verification.md  07-drift-observatory.md  08-publish-hugo.md  09-web-phase-a.md  10-web-phase-b.md  11-web-phase-c.md  12-dashboard-workspace-redesign.md  13-sync-engine-phase1-git-worker.md  18-port-debt-board.md  (+18 more)
mai-data/: hugo.toml
tests/: conftest.py  test_acceptance_portability.py  test_accounts.py  test_apply_fraction.py  test_areas.py  test_board_api.py  test_board_api_verdicts.py  test_board_models.py  test_board_reconcile.py  test_board_service.py  test_build_port_verdicts.py  test_cherry.py  test_classify.py  test_classify_drift_seed.py  test_classify_run.py  test_cli_parser.py  test_cli_parser_b1.py  test_codememory.py  test_commit_repository.py  test_compute_verdicts.py  test_conflict_closeness.py  test_correlate_embedding.py  test_correlate_explicit.py  test_correlate_run.py  test_correlation_repo.py  test_cppindex.py  test_cursors.py  test_dataviz.py  test_deploy_hook.py  test_drift_compare.py  test_drift_repo.py  test_drift_run.py  test_embed_run.py  test_embedding_repo.py  test_enrich_concurrent.py  test_enrich_resilience.py  test_enrich_run.py  test_enrichment_repo.py  test_enrichment_schema.py  test_fake_apply_fraction.py  (+58 more)
(+128 files in other folders)
