[project]
name = "mai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "tree-sitter>=0.22",
    "tree-sitter-cpp>=0.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mai = "mai.cli.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
